Overflow hidden to prevent horizontal scroll

--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -75,6 +75,7 @@ nav {
 
     display: flex;
     justify-content: space-between;
+    overflow: hidden;
 
     .title {
         @include crimson;
